not anon by default & fixed wrapping in catalogue

--- a/public/stylesheets/catalogue.css
+++ b/public/stylesheets/catalogue.css
@@ -25,7 +25,7 @@ body {
 	width: 128px;
 	padding: 8px;
 	margin: 16px;
-	word-break: break-all;
+	word-wrap: break-word;
 	overflow: hidden;
 	cursor: pointer;
 	transition: background-color 0.5s, box-shadow 0.5s;
